--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -872,7 +872,7 @@
 
 /* Social Media */
 .footer-social {
-  margin: 2rem auto 0;
+  margin: 0.25rem auto 0 !important;
   width: 100%;
   max-width: 400px;
 }
@@ -1565,7 +1565,7 @@
   
   .footer-social {
     max-width: 500px;
-    margin: 2rem auto 0;
+    margin: 0.25rem auto 0 !important;
   }
   
   .social-heading {
@@ -2004,7 +2004,7 @@
 .footer-social {
   display: flex;
   gap: 0.75rem;
-  margin-top: 1.5rem;
+  margin-top: 0.25rem !important;
 }
 
 .social-link {
